--- a/pgvector/setup/tasks/main.yml
+++ b/pgvector/setup/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
   - name: Set Facts
     set_fact:
-      use_package_install: "{{ lookup('env', 'PGSM_PACKAGE_INSTALL') }}"
+      use_package_install: "{{ lookup('env', 'PGVECTOR_PACKAGE_INSTALL') }}"
       major_version: "{{ lookup('env', 'VERSION').split('.')[0].split('-')[1] }}"
       cacheable: true
 
