--- a/tasks/install_ppg16_tools.yml
+++ b/tasks/install_ppg16_tools.yml
@@ -780,6 +780,24 @@
   #   when: ansible_os_family == "RedHat" and
   #     (ansible_distribution_major_version == "8" or ansible_distribution_major_version == "9")
 
+  - name: Copy llvm_analysis.sql to tmp
+    ignore_errors: true
+    copy:
+      src:  "{{ playbook_dir }}/../../../../misc_tasks/llvm_analysis.sql"
+      dest: /tmp/llvm_analysis.sql
+      owner: postgres
+      group: postgres
+      mode: 0755
+
+  - name: Copy llvm_analysis.sql to tmp
+    ignore_errors: true
+    copy:
+      src:  "{{ playbook_dir }}/../../../misc_tasks/llvm_analysis.sql"
+      dest: /tmp/llvm_analysis.sql
+      owner: postgres
+      group: postgres
+      mode: 0755
+
   - name: Pause for 1 minutes
     ansible.builtin.pause:
       minutes: 1
