--- a/pgaudit13_set_user/setup/molecule/amd/molecule.yml
+++ b/pgaudit13_set_user/setup/molecule/amd/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-08b280891de0645a1
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.medium
+    instance_type: t2.large
     ssh_user: ec2-user
     root_device_name: /dev/sda1
     instance_tags:
