--- a/pgvector/setup/playbooks/playbook.yml
+++ b/pgvector/setup/playbooks/playbook.yml
@@ -4,6 +4,6 @@
   become: true
   become_method: sudo
   roles:
-    - role: pgsm
+    - role: setup
   environment:
-    PG_TEST_PORT_DIR: /tmp/pg_stat_monitor
+    PG_TEST_PORT_DIR: /tmp/pgvector
