--- a/pgvector/setup/molecule/arm/molecule.yml
+++ b/pgvector/setup/molecule/arm/molecule.yml
@@ -4,12 +4,12 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pgvector-ol9-arm-${BUILD_NUMBER}
+  - name: pgvector-unoble-arm-${BUILD_NUMBER}
     region: eu-central-1
-    image: ami-098a7d45c0983caea
+    image: ami-008edee5e5698d629
     vpc_subnet_id: subnet-085deaca8c1c59a4f
     instance_type: t4g.xlarge
-    ssh_user: ec2-user
+    ssh_user: ubuntu
     root_device_name: /dev/sda1
     instance_tags:
       iit-billing-tag: jenkins-pg-worker
@@ -21,14 +21,8 @@ provisioner:
     destroy: ../../../../playbooks/destroy.yml
     prepare: ../../../../playbooks/prepare.yml
     converge: ../../playbooks/playbook.yml
-    verify: ../../playbooks/verify.yml
 verifier:
-  name: testinfra
-  directory: ../../../tests/
-  options:
-    verbose: true
-    s: true
-    junitxml: report.xml
+  name: ansible
 scenario:
   destroy_sequence:
     - destroy
@@ -39,5 +33,4 @@ scenario:
     - create
     - prepare
     - converge
-    - verify
     - destroy
