--- a/pgvector/setup/tasks/main.yml
+++ b/pgvector/setup/tasks/main.yml
@@ -148,10 +148,10 @@
       packages:
         - percona-postgresql-{{ major_version }}-pgvector
 
-  - name: Add extensions to postgresql.conf for Debian
-    lineinfile:
-      path: /etc/postgresql/{{ major_version }}/main/postgresql.conf
-      line: shared_preload_libraries = 'pgvector'
+  # - name: Add extensions to postgresql.conf for Debian
+  #   lineinfile:
+  #     path: /etc/postgresql/{{ major_version }}/main/postgresql.conf
+  #     line: shared_preload_libraries = 'pgvector'
 
   - name: Stop postgresql service for Debian based
     service:
