--- a/pgvector/setup/tasks/main.yml
+++ b/pgvector/setup/tasks/main.yml
@@ -148,10 +148,21 @@
       packages:
         - percona-postgresql-{{ major_version }}-pgvector
 
-  # - name: Add extensions to postgresql.conf for Debian
-  #   lineinfile:
-  #     path: /etc/postgresql/{{ major_version }}/main/postgresql.conf
-  #     line: shared_preload_libraries = 'pgvector'
+  - name: Install pg-stat-monitor Debian/Ubuntu Package
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pg-stat-monitor{{ major_version }}
+        - percona-pg-stat-monitor{{ major_version }}-dbgsym
+    when: use_package_install
+
+  - name: Add extensions to postgresql.conf for Debian
+    lineinfile:
+      path: /etc/postgresql/{{ major_version }}/main/postgresql.conf
+      line: shared_preload_libraries = 'pg_stat_monitor'
 
   - name: Stop postgresql service for Debian based
     service:
