Updating set_user vms to ubuntu.

--- a/pgaudit13_set_user/setup-old/molecule/amd/molecule.yml
+++ b/pgaudit13_set_user/setup-old/molecule/amd/molecule.yml
@@ -4,12 +4,12 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: setuser-unoble-${BUILD_NUMBER}
+  - name: setuser-ol9-amd-${BUILD_NUMBER}
     region: eu-central-1
-    image: ami-0f67ca03a667867bb
+    image: ami-08b280891de0645a1
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.xlarge
-    ssh_user: ubuntu
+    instance_type: t2.large
+    ssh_user: ec2-user
     root_device_name: /dev/sda1
     instance_tags:
       iit-billing-tag: jenkins-pg-worker
