--- a/pgaudit13_set_user/setup/molecule/arm/molecule.yml
+++ b/pgaudit13_set_user/setup/molecule/arm/molecule.yml
@@ -4,12 +4,12 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: setuser-ol9-arm-${BUILD_NUMBER}
+  - name: setuser-unoble-arm-${BUILD_NUMBER}
     region: eu-central-1
-    image: ami-098a7d45c0983caea
+    image: ami-008edee5e5698d629
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t4g.large
-    ssh_user: ec2-user
+    instance_type: t4g.xlarge
+    ssh_user: ubuntu
     root_device_name: /dev/sda1
     instance_tags:
       iit-billing-tag: jenkins-pg-worker
