--- a/pgaudit13_set_user/setup/tasks/main.yml
+++ b/pgaudit13_set_user/setup/tasks/main.yml
@@ -1,112 +1,136 @@
 ---
-- name: Set Facts - Major version
-  set_fact:
-    major_version: "{{ lookup('env', 'VERSION').split('.')[0].split('-')[1] }}"
-    cacheable: true
+  - name: Set Facts
+    set_fact:
+      major_version: "{{ lookup('env', 'VERSION').split('.')[0].split('-')[1] }}"
+      cacheable: true
 
-- name: Configure repository
-  include_tasks: ../../../../tasks/enable_repo.yml
+  - name: Configure repository
+    include_tasks: ../../../../tasks/enable_repo.yml
 
-- name: setup epel release
-  yum:
-    name: epel-release
-    update_cache: yes
-    state: present
+  - name: Install build dependencies on Debian
+    apt:
+      name: "{{ packages }}"
+      update_cache: yes
+      state: latest
+    vars:
+      packages:
+        - libreadline6-dev
+        - systemtap-sdt-dev
+        - zlib1g-dev
+        - libssl-dev
+        - libpam0g-dev
+        - python3-dev
+        - bison
+        - flex
+        - libipc-run-perl
+        - wget
+        - libtext-trim-perl
+        - gnupg
+        - tzdata
+        - locales
+        - lsb-release
+        - apt-utils
+        - make
+        - gcc
+        - gnupg2
+        - curl
+        - libz-dev
+        - liblz4-dev
+        - libreadline6-dev
 
-- name: Enable ol9_codeready_builder on oracle linux 9
-  become: true
-  command: dnf config-manager --set-enabled ol9_codeready_builder
+  - name: install Percona Platform for PostgreSQL deb packages
+    apt:
+      name: "{{ packages }}"
+      update_cache: yes
+      state: latest
+    vars:
+      postgres_version: "{{ major_version }}"
+      packages:
+      - percona-postgresql
+      - percona-postgresql-{{ postgres_version }}
+      - percona-postgresql-all
+      - percona-postgresql-client
+      - percona-postgresql-client-{{ postgres_version }}
+      - percona-postgresql-common
+      - percona-postgresql-contrib
+      - percona-postgresql-doc
+      - percona-postgresql-doc-{{ postgres_version }}
+      - percona-postgresql-plperl-{{ postgres_version }}
+      - percona-postgresql-plpython3-{{ postgres_version }}
+      - percona-postgresql-pltcl-{{ postgres_version }}
+      - percona-postgresql-server-dev-{{ postgres_version }}
+      - percona-postgresql-server-dev-all
+      - percona-postgresql-{{ postgres_version }}-dbgsym
+      - percona-postgresql-client-{{ postgres_version }}-dbgsym
+      - percona-postgresql-plperl-{{ postgres_version }}-dbgsym
+      - percona-postgresql-plpython3-{{ postgres_version }}-dbgsym
+      - percona-postgresql-pltcl-{{ postgres_version }}-dbgsym
+    environment:
+      PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
 
-- name: install Percona Platform for PostgreSQL rpm packages
-  yum:
-    name: "{{ packages }}"
-    state: latest
-    update_cache: yes
-  vars:
-    packages:
-    - percona-postgresql-client-common
-    - percona-postgresql-common
-    - percona-postgresql-server-dev-all
-    - percona-postgresql{{ major_version }}
-    - percona-postgresql{{ major_version }}-contrib
-    - percona-postgresql{{ major_version }}-devel
-    - percona-postgresql{{ major_version }}-libs
-    - percona-postgresql{{ major_version }}-llvmjit
-    - percona-postgresql{{ major_version }}-plperl
-    - percona-postgresql{{ major_version }}-plpython3
-    - percona-postgresql{{ major_version }}-pltcl
-    - percona-postgresql{{ major_version }}-server
-    - percona-postgresql{{ major_version }}-test
-    - openssl-devel
-    - gcc
-    - readline-devel
-    - make
-    - redhat-rpm-config
-    - clang
-    - clang-devel
-    - git
-  environment:
-    PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
+  - name: Install pgaudit Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      postgres_version: "{{ major_version }}"
+      packages:
+        - percona-postgresql-{{ postgres_version }}-pgaudit
+        - percona-postgresql-{{ postgres_version }}-pgaudit-dbgsym
+    environment:
+      PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
 
-- name: Initialize Postgres RHEL
-  become: true
-  command: /usr/pgsql-{{ major_version }}/bin/postgresql-{{ major_version }}-setup initdb
-  environment:
-    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+  - name: Clone set_user sources
+    git:
+      repo: "{{ repo }}"
+      version: "{{ version }}"
+      dest: /tmp/set_user
+    vars:
+      repo: "{{ lookup('env', 'COMPONENT_REPO') }}"
+      version: "{{ lookup('env', 'COMPONENT_VERSION') }}"
+    become_user: postgres
 
-- name: Start Postgres RHEL
-  service:
-    name: postgresql-{{ major_version }}
-    state: started
-    enabled: yes
+  - name: Build set_user from sources
+    make:
+      chdir: "/tmp/set_user"
+      params:
+        USE_PGXS: 1
 
-- name: Clone set_user sources
-  git:
-    repo: "{{ repo }}"
-    version: "{{ version }}"
-    dest: /tmp/set_user
-  vars:
-    repo: "{{ lookup('env', 'COMPONENT_REPO') }}"
-    version: "{{ lookup('env', 'COMPONENT_VERSION') }}"
-  become_user: postgres
+  # - name: Install set_user from sources
+  #   make:
+  #     target: install
+  #     chdir: "/tmp/set_user"
+  #     params:
+  #       USE_PGXS: 1
 
-- name: Build set_user from sources
-  make:
-    chdir: "/tmp/set_user"
-    params:
-      USE_PGXS: 1
+  - name: Add extensions to postgresql.conf for RHEL
+    lineinfile:
+      path: /etc/postgresql/{{ major_version }}/main/postgresql.conf
+      line: shared_preload_libraries = 'set_user'
 
-- name: Install set_user from sources
-  make:
-    target: install
-    chdir: "/tmp/set_user"
-    params:
-      USE_PGXS: 1
 
-- name: Add extensions to postgresql.conf for RHEL
-  lineinfile:
-    path: /var/lib/pgsql/{{ major_version }}/data/postgresql.conf
-    line: shared_preload_libraries = 'set_user'
+  - name: Stop postgresql service for Debian based
+    service:
+      name: postgresql
+      state: stopped
 
-- name: Restart Postgres RHEL
-  service:
-    name: postgresql-{{ major_version }}
-    state: stopped
-  register: out
+  - name: Start postgresql service for Debian based
+    service:
+      name: postgresql
+      state: started
+      enabled: true
 
-- name: Start Postgres RHEL
-  service:
-    name: postgresql-{{ major_version }}
-    state: started
-    enabled: yes
+  - debug:
+      var: results.stdout
 
-- name: Test set_user
-  make:
-    target: installcheck
-    chdir: "/tmp/set_user"
-    params:
-      USE_PGXS: 1
-  become_user: postgres
-  register: installcheck
+  - name: Test set_user
+    make:
+      target: installcheck
+      chdir: "/tmp/set_user"
+      params:
+        USE_PGXS: 1
+    become_user: postgres
+    register: installcheck
 
-- debug: var=installcheck.stdout_lines
+  - debug: var=installcheck.stdout_lines
