--- a/pdp/performance_tests/tasks/debian_tasks.yml
+++ b/pdp/performance_tests/tasks/debian_tasks.yml
@@ -217,20 +217,24 @@
 
   - name: Run performance tests for HEAP access method
     shell: | 
+      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Testing access method: heap" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
       psql -c "DROP DATABASE IF EXISTS performance_db;" -U postgres
       psql -c "CREATE DATABASE performance_db;" -U postgres
-      psql -d performance_db -c "ALTER SYSTEM  SET default_table_access_method='heap';"
+      psql -d performance_db -c "ALTER SYSTEM SET default_table_access_method='heap';"
       psql -d performance_db -c "SELECT pg_reload_conf();"
-      pgbench -i -s {{ scale }} -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
+      echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
+      pgbench -i -s {{ scale }} -d performance_db -U postgres 2>&1
       pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
-      echo "" >> tee -a /tmp/access_method_benchmark_report.txt
-      echo "---------------------------------" >> tee -a /tmp/access_method_benchmark_report.txt
-      echo "" >> tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "----End of heap access method----" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
       sync
       sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
     become_user: postgres
@@ -257,7 +261,7 @@
       path: /tmp/access_method_benchmark_report.txt
     register: output
 
-  - name: Display Benchmark Results
+  - name: Register Benchmark Results
     command: cat /tmp/access_method_benchmark_report.txt
     register: command_output
     when: output.stat.exists
