--- a/pdp/performance_tests/tasks/debian_tasks.yml
+++ b/pdp/performance_tests/tasks/debian_tasks.yml
@@ -218,7 +218,7 @@
   - name: Run performance tests for HEAP access method
     shell: | 
       echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "Testing access method: heap" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Testing access method: HEAP" | tee -a /tmp/access_method_benchmark_report.txt
       echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
@@ -231,10 +231,10 @@
       pgbench -i -s {{ scale }} -d performance_db -U postgres 2>&1
       pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
       echo "" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "----End of heap access method----" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "----End of HEAP access method----" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
       sync
       sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
     become_user: postgres
@@ -260,7 +260,7 @@
   - name: Run performance tests for TDE_HEAP access method
     shell: | 
       echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "Testing access method: heap" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Testing access method: TDE_HEAP" | tee -a /tmp/access_method_benchmark_report.txt
       echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
@@ -273,10 +273,10 @@
       pgbench -i -s {{ scale }} -d performance_db -U postgres 2>&1
       pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
       echo "" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "----End of heap access method----" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "----End of TDE_HEAP access method----" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
       sync
       sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
     become_user: postgres
@@ -302,7 +302,7 @@
   - name: Run performance tests for TDE_HEAP_BASIC access method
     shell: | 
       echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "Testing access method: heap" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Testing access method: TDE_HEAP_BASIC" | tee -a /tmp/access_method_benchmark_report.txt
       echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
@@ -315,10 +315,10 @@
       pgbench -i -s {{ scale }} -d performance_db -U postgres 2>&1
       pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
       echo "" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "----End of heap access method----" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "----End of TDE_HEAP_BASIC access method----" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
       sync
       sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
     become_user: postgres
