--- a/psp/performance_tests/tasks/debian_tasks.yml
+++ b/psp/performance_tests/tasks/debian_tasks.yml
@@ -91,15 +91,14 @@
       group: admin
       mode: 0775
 
-  - name: Clone Postgres/PDP sources with pg_tde
+  - name: Clone Postgres/PSP sources with pg_tde
     git:
       repo: "{{ repo }}"
       version: "{{ version }}"
       dest: /tmp/postgres
-      track_submodules: true
     vars:
-      repo: "{{ lookup('env', 'PDP_REPO') }}"
-      version: "{{ lookup('env', 'PDP_BRANCH') }}"
+      repo: "{{ lookup('env', 'PSP_REPO') }}"
+      version: "{{ lookup('env', 'PSP_BRANCH') }}"
     become_user: postgres
 
   # - name: Checkout user provided pg_tde branch
@@ -117,7 +116,7 @@
   #   args:
   #     chdir: /tmp/postgres/contrib/pg_tde
 
-  - name: Configure Postgres/PDP from sources
+  - name: Configure Postgres/PSP from sources
     command: ./configure '--build=x86_64-linux-gnu' '--prefix=/opt/pgsql' '--enable-depend' \
      '--enable-cassert' '--enable-coverage' '--with-icu' '--with-tcl' '--with-perl' \
      '--with-python' '--with-pam' '--with-openssl' '--with-libxml' '--with-libxslt' \
@@ -140,7 +139,7 @@
 
   - debug: var=results.stdout_lines
 
-  - name: Build Postgres/PDP (world-bin) from sources
+  - name: Build Postgres/PSP (world-bin) from sources
     make:
       chdir: "/tmp/postgres"
       jobs: 4 
@@ -150,7 +149,7 @@
 
   - debug: var=results.stdout_lines
 
-  - name: Install Postgres/PDP (install-world-bin) from build binaries
+  - name: Install Postgres/PSP (install-world-bin) from build binaries
     make:
       chdir: "/tmp/postgres"
       target: install-world-bin
@@ -191,11 +190,11 @@
 
   - debug: var=results.stdout_lines
 
-  # - name: Add extensions to postgresql.conf for Debian
-  #   lineinfile:
-  #     path: /opt/pgsql/data/postgresql.conf
-  #     line: shared_preload_libraries = 'pg_tde'
-  #   when: with_tde_heap
+  - name: Add extensions to postgresql.conf for Debian
+    lineinfile:
+      path: /opt/pgsql/data/postgresql.conf
+      line: shared_preload_libraries = 'pg_tde'
+    when: load_tde
 
   # - name: Set default Access Method - heap
   #   lineinfile:
@@ -232,9 +231,9 @@
       pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
       echo "" | tee -a /tmp/access_method_benchmark_report.txt
       echo "----End of HEAP access method----" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
       sync
       sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
     become_user: postgres
@@ -274,9 +273,9 @@
       pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
       echo "" | tee -a /tmp/access_method_benchmark_report.txt
       echo "----End of TDE_HEAP access method----" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=====================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
       sync
       sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
     become_user: postgres
@@ -316,9 +315,9 @@
       pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
       echo "" | tee -a /tmp/access_method_benchmark_report.txt
       echo "----End of TDE_HEAP_BASIC access method----" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "===========================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
       sync
       sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
     become_user: postgres
@@ -337,6 +336,94 @@
       LC_CTYPE: C
       LC_ALL: C
     when: run_tde_heap_basic
+    register: results
+
+  - debug: var=results.stdout_lines
+
+  - name: Run performance tests for TDE_HEAP access method with pg_tde loaded
+    shell: | 
+      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Testing access method: TDE_HEAP" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
+      psql -c "DROP DATABASE IF EXISTS performance_db;" -U postgres
+      psql -c "CREATE DATABASE performance_db;" -U postgres
+      psql -d performance_db -c "ALTER SYSTEM SET default_table_access_method='tde_heap';"
+      psql -d performance_db -c "SELECT pg_reload_conf();"
+      psql -d performance_db -c "CREATE EXTENSION pg_tde;"
+      psql -d performance_db -c "SELECT pg_reload_conf();"
+      echo "---------------------------------"
+      pgbench -i -s {{ scale }} -d performance_db -U postgres 2>&1
+      pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "----End of TDE_HEAP access method----" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "=====================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      sync
+      sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+    become_user: postgres
+    args:
+      executable: /bin/bash
+      chdir: "/tmp/postgres"
+    vars:
+      scale: "{{pgbench_scale}}"
+      clients: "{{pgbench_clients}}"
+      threads: "{{pgbench_threads}}"
+      duration: "{{pgbench_duration}}"
+    environment:
+      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
+      LD_LIBRARY_PATH: "/opt/pgsql/lib"
+      LANG: C.UTF-8
+      LC_CTYPE: C
+      LC_ALL: C
+    when: run_tde_heap and load_tde
+    register: results
+
+  - debug: var=results.stdout_lines
+
+  - name: Run performance tests for TDE_HEAP_BASIC access method with pg_tde loaded
+    shell: | 
+      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Testing access method: TDE_HEAP_BASIC" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "===========================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
+      psql -c "DROP DATABASE IF EXISTS performance_db;" -U postgres
+      psql -c "CREATE DATABASE performance_db;" -U postgres
+      psql -d performance_db -c "ALTER SYSTEM SET default_table_access_method='tde_heap_basic';"
+      psql -d performance_db -c "SELECT pg_reload_conf();"
+      psql -d performance_db -c "CREATE EXTENSION pg_tde_basic;"
+      psql -d performance_db -c "SELECT pg_reload_conf();"
+      echo "---------------------------------"
+      pgbench -i -s {{ scale }} -d performance_db -U postgres 2>&1
+      pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "----End of TDE_HEAP_BASIC access method----" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "===========================================" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" | tee -a /tmp/access_method_benchmark_report.txt
+      sync
+      sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+    become_user: postgres
+    args:
+      executable: /bin/bash
+      chdir: "/tmp/postgres"
+    vars:
+      scale: "{{pgbench_scale}}"
+      clients: "{{pgbench_clients}}"
+      threads: "{{pgbench_threads}}"
+      duration: "{{pgbench_duration}}"
+    environment:
+      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
+      LD_LIBRARY_PATH: "/opt/pgsql/lib"
+      LANG: C.UTF-8
+      LC_CTYPE: C
+      LC_ALL: C
+    when: run_tde_heap_basic and load_tde
     register: results
 
   - debug: var=results.stdout_lines
